fixed layout issues

--- a/css/project.css
+++ b/css/project.css
@@ -455,8 +455,9 @@ nav ul li a {
 #discover-section,
 #define-section,
 #develop-section {
-  -ms-grid-column: 2;
-  grid-column: 2;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 4;
+  grid-column: 1 / 5;
 }
 
 #discover-section figure#terms-table img,
@@ -476,6 +477,8 @@ nav ul li a {
   #discover-section,
   #define-section,
   #develop-section {
+    -ms-grid-column: 2;
+    grid-column: 2;
     -ms-grid-columns: (1fr)[4];
         grid-template-columns: repeat(4, 1fr);
   }
@@ -592,49 +595,71 @@ nav ul li a {
 }
 
 .visier-deliver {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 3;
-  grid-column: 2 / 5;
-  -ms-grid-columns: 1fr 2fr;
-      grid-template-columns: 1fr 2fr;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
   grid-column-gap: 4em;
-}
-
-.visier-deliver #p1 {
   -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-column: 1 / 3;
-}
-
-.visier-deliver #p2 {
-  -ms-grid-column: 2;
-  grid-column: 2;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-}
-
-.visier-deliver #p4 {
-  -ms-grid-row: 4;
-  grid-row: 4;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  -ms-grid-column-span: 5;
+  grid-column: 1 / 6;
 }
 
 .visier-deliver #workflow {
-  -ms-grid-row: 3;
-  grid-row: 3;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  text-align: center;
 }
 
 .visier-deliver #workflow img {
   padding: 2em;
   background-color: white;
+  max-width: 20em;
+  margin: 0 auto;
 }
 
-.visier-deliver #fig2 {
-  -ms-grid-column: 2;
-  grid-column: 2;
+@media only screen and (min-width: 720px) {
+  .visier-deliver {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 5;
+    grid-column: 1 / 6;
+    -ms-grid-columns: 1fr 2fr;
+        grid-template-columns: 1fr 2fr;
+  }
+  .visier-deliver #p1 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / 3;
+  }
+  .visier-deliver #p2 {
+    -ms-grid-column: 2;
+    grid-column: 2;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+  .visier-deliver #p4 {
+    -ms-grid-row: 4;
+    grid-row: 4;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+  .visier-deliver #workflow {
+    -ms-grid-row: 3;
+    grid-row: 3;
+    text-align: left;
+  }
+  .visier-deliver #fig2 {
+    -ms-grid-column: 2;
+    grid-column: 2;
+  }
+}
+
+@media only screen and (min-width: 1080px) {
+  .visier-deliver {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 3;
+    grid-column: 2 / 5;
+  }
 }
 
 #discover-section {
